--- a/scripts/prepare_phenotypes_cmv.rmd
+++ b/scripts/prepare_phenotypes_cmv.rmd
@@ -1,15 +1,16 @@
 ---
-  title: Generating CMV data
+title: Generating CMV data
 author: Ildar Sadreev
 date: 29/08/2019
+output: html_document
 ---
-  
-  
-  
-  
-  ## Objective
-  
-  - Read in the data available for CMV
+
+
+
+
+## Objective
+
+- Read in the data available for CMV
 - Maximise sample size by getting the value for each individual recorded at the most recent time point
 - Create binary variable based on OD cutoff of 1
 - Rank transform the continuous variable
@@ -37,16 +38,16 @@ b1 <- merge(bb, a, by.bb= "aln", by.a = "aln")
 
 
 How does OD compare against std_OD?
-  
-  
-  ```{r}
+
+
+```{r}
 plot(cmv_od_F7 ~ cmv_std_F7, data=b1)
 ```
 
 How much similarity is there across age groups?
-  
-  
-  ```{r}
+
+
+```{r}
 plot(cmv_od_F7 ~ cmv_od_F11, data=b1)
 plot(cmv_od_F7 ~ cmv_std_TF3, data=b1)
 plot(cmv_od_F11 ~ cmv_std_TF3, data=b1)
@@ -57,9 +58,9 @@ plot(cmv_od_F11 ~ cmv_std_TF3, data=b1)
 ## Selecting the optical density for the latest available age and assigning this age to covariates
 
 There are three time points for children with CMV measures... How many from each time point?
-  
-  
-  ```{r}
+
+
+```{r}
 t=c()
 n=c()
 r=c()
@@ -117,8 +118,8 @@ c1 <- c[c$od_max > 0, ]
 ```
 
 How many records for each time point?
-  
-  ```{r}
+
+```{r}
 nrow(c[c$cmv_od_F7>-1,])
 nrow(c[c$cmv_od_F11>-1,])
 nrow(c[c$cmv_od_TF3>-1,])
@@ -133,9 +134,9 @@ var(c1$od_std_max)
 ```
 
 How many cases vs controls when data is binary?
-  
-  
-  ```{r}
+
+
+```{r}
 table(c1$od_std_max_bin)
 
 ```
@@ -173,12 +174,12 @@ Plot histograms for std and rank transformed
 
 ```{r}
 
-png("Pheno_std_rt.png") 
+#png("Pheno_std_rt.png") 
 par(mfrow=c(2,1))
 hist(c1$od_std_max, breaks=100, col="lightblue")
 abline(v = 1, col="red", lwd=3, lty=2)
 hist(c1$od_max_rt, breaks=100, col="lightblue")
-dev.off()
+#dev.off()
 
 ```
 
@@ -186,8 +187,8 @@ dev.off()
 ## Write out the data
 
 Use the format for GCTA: http://cnsgenomics.com/software/gcta/#GREMLanalysis
-  
-  We duplicate ID for each sample
+
+We duplicate ID for each sample
 
 Prepare the phenotype data for continious od
 
